--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "doggoreportbot",
   "version": "1.0.8",
-  "description": "",
+  "description": "Telegram bot",
   "main": "index.js",
+  "bin": "./index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Croluy/DoggoReportBot.git"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "setup": "ncu -u && npm i",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Croluy <croluy@fbi.ac>",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
     "edit-json-file": "^1.7.0",
-    "fs": "^0.0.1-security",
     "nodemon": "^2.0.15",
     "telegraf": "^4.7.0"
   }
