--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "edit-json-file": "^1.7.0",
+    "fs": "^0.0.1-security",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
     "telegraf": "^4.7.0"
   }
 }
